[gd_scene load_steps=2 format=3 uid="uid://bvxm7n1yha3la"]

[ext_resource type="Script" uid="uid://c6efp4lnlr8aw" path="res://src/ui/menus/PauseMenu.gd" id="1"]

[node name="PauseMenu" type="Control"]
process_mode = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="PausePanel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.95)
layout_mode = 0
offset_left = -1080.0
offset_top = -646.0
offset_right = -840.0
offset_bottom = -466.0

[node name="VBox" type="VBoxContainer" parent="PausePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 9.0
offset_right = -4.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="PausePanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 24
text = "PAUSED"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="PausePanel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ResumeButton" type="Button" parent="PausePanel/VBox"]
custom_minimum_size = Vector2(180, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 18
text = "Resume"

[node name="Spacer2" type="Control" parent="PausePanel/VBox"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="ExitButton" type="Button" parent="PausePanel/VBox"]
custom_minimum_size = Vector2(180, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 18
text = "Exit"

[connection signal="pressed" from="PausePanel/VBox/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PausePanel/VBox/ExitButton" to="." method="_on_exit_button_pressed"]
